--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		<link type="text/css" rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-
+        <!-- 页眉区header -->  <!-- 页眉区中包括背景图片logo和导航区nav -->
 		<div id="header">
+			<!-- 导航区 nav-->
 			<div id="nav">
+				<!-- 使用无序列表-->
 				<ul class="nav-list">
 					<li class="nav-item">
 						<a href="index.html" class="selected">
@@ -43,29 +45,38 @@
 						</a>
 					</li>
 				</ul>
-			</div>
+			</div>			
 		</div>
+		 <!-- end of header -->
+		 
+		<!-- 内容区 container 内容分为title和content两部分-->
 		<div id="container">
-
+            <!--内容区1  页面标题 title --> 
 			<div class="title">
 				<h2>———<br>——— HOME ———</h2>
 			</div>
+			<!--内容区2 页面中的具体内容 content -->
 			<div class="content">
-				<div class="zhanwei"> </div>
+				<!-- 内容区2-1 content-text区 内部分为三段文字 -->
 				<div class="content-text">
 					<p class="t1">This is Zhang Meiru !</p>
 					<p class="t2">Welcome To My World </p>
 					<p class="t3">世界上最快乐的事 ，莫过于为理想而奋斗。</p>
 				</div>
+				<!-- 内容区2-2 start区 内部分为两个部分begin和start-bt -->
 				<div class="start">
 					<div class="begin">begin</div>
 					<div class="start-bt"><a href="me.html"><img src="img/start.png" /></a></div>
 				</div>
 			</div>
-
+            <!-- end of content -->
 		</div>
+		<!-- end of container -->
+		
+		<!-- 页脚区 footer -->
 		<div id="footer">
 			<p>如果你知道自己要去哪里 ，那么全世界都会为你让路</p>
 		</div>
+		<!-- end of footer -->
 	</body>
 </html>
