--- a/music.html
+++ b/music.html
@@ -8,9 +8,12 @@
 		<link type="text/css" rel="stylesheet" href="css/music.css" />
 	</head>
 	<body>
-
+		<!-- 页眉区 header -->
+		<!-- 页眉区中包括背景图片logo和导航区nav -->
 		<div id="header">
+			<!-- 导航区 nav-->
 			<div id="nav">
+				<!-- 使用无序列表-->
 				<ul class="nav-list">
 					<li class="nav-item">
 						<a href="index.html">
@@ -47,7 +50,11 @@
 				</ul>
 			</div>
 		</div>
+		<!-- end of header -->
+
+		<!-- 内容区 container 内部分为left-nav侧边导航栏和content内容两部分-->
 		<div id="container">
+			<!-- 内容区1 left-nav 侧边导航栏 -->
 			<div class="left-nav">
 				<ul class="left-nav-list">
 					<li class="left-nav-item">
@@ -66,14 +73,19 @@
 					</li>
 				</ul>
 			</div>
+			<!-- end of left-nav -->
+			<!-- 内容区2 content 页面内容 内部又分为两个部分title和content-details -->
 			<div class="content">
+				<!-- 内容区2-1 页面标题 title --> 
 				<div class="title">
 					<h2>———<br>——— MUSICS ———</h2>
 				</div>
+				<!-- 内容区2-2 页面详情 content-details 内部分为两个部分left和right-->
 				<div class="content-details">
+					<!-- 内容区2-2-1 left 左区域 --> 
 					<div class="left">
+						<!-- 歌曲信息 --> 
 						<div class="music">
-
 							<img src="img/Waterfall.jpg" class="music-image" />
 							<div class="music-name">
 								<span>Waterfall</span>
@@ -82,15 +94,15 @@
 									<embed src="mp3/Waterfall.mp3" height="50" width="100"></embed>
 								</audio>
 							</div>
-
 						</div>
+						<!-- 歌曲歌词 --> 
 						<div class="geci">
 							<p> <b>节选歌词</b> <br />
 								Like a wildflower stuck in a seed<br />
 								You're kept in the dark been held there too long<br />
 								Like a stone heart you're dying to live<br />
-								The beating is gone	you're still holding on<br />
-								No I will never give up	give up this fight<br />
+								The beating is gone you're still holding on<br />
+								No I will never give up give up this fight<br />
 								And I just have to get up get up and try<br />
 								I'm standing on the edge of a waterfall<br />
 								I can see it clearly from above<br />
@@ -104,9 +116,11 @@
 						</div>
 
 					</div>
+					<!-- end of left --> 
+					<!-- 内容区2-2-2 right 右区域 --> 
 					<div class="right">
+						<!-- 歌曲信息 --> 
 						<div class="music">
-
 							<img src="img/年少有为.jpg" class="music-image" />
 							<div class="music-name">
 								<span>年少有为</span>
@@ -115,8 +129,8 @@
 									<embed src="mp3/年少有为.mp3" autostart="false" height="50" width="100"></embed>
 								</audio>
 							</div>
-
 						</div>
+						<!-- 歌曲歌词 -->
 						<div class="geci">
 							<p> <b>节选歌词</b> <br />
 								电视一直闪<br />
@@ -141,17 +155,19 @@
 								<a href="https://music.163.com/#/song?id=1330929328&userid=2000360617" target="_blank" rel="noopener noreferrer">查看全部歌词</a>
 							</p>
 						</div>
-						<div>
-							
-						</div>                         
 					</div>
+				    <!-- end of right -->
 				</div>
+			    <!-- end of content-details -->
 			</div>
-
-
+		    <!-- end of content -->
 		</div>
+		<!-- end of container -->
+
+		<!-- 页脚区 footer -->
 		<div id="footer">
 			<p>如果你知道自己要去哪里 ，那么全世界都会为你让路</p>
 		</div>
+		<!-- end of footer -->
 	</body>
 </html>
