--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<link type="text/css" rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-        <!-- 页眉区header -->  <!-- 页眉区中包括背景图片logo和导航区nav -->
+		<!-- 页眉区header -->
+		<!-- 页眉区中包括背景图片logo和导航区nav -->
 		<div id="header">
 			<!-- 导航区 nav-->
 			<div id="nav">
@@ -45,13 +46,13 @@
 						</a>
 					</li>
 				</ul>
-			</div>			
+			</div>
 		</div>
-		 <!-- end of header -->
-		 
+		<!-- end of header -->
+
 		<!-- 内容区 container 内容分为title和content两部分-->
 		<div id="container">
-            <!--内容区1  页面标题 title --> 
+			<!--内容区1  页面标题 title -->
 			<div class="title">
 				<h2>———<br>——— HOME ———</h2>
 			</div>
@@ -69,10 +70,10 @@
 					<div class="start-bt"><a href="me.html"><img src="img/start.png" /></a></div>
 				</div>
 			</div>
-            <!-- end of content -->
+			<!-- end of content -->
 		</div>
 		<!-- end of container -->
-		
+
 		<!-- 页脚区 footer -->
 		<div id="footer">
 			<p>如果你知道自己要去哪里 ，那么全世界都会为你让路</p>
